--- a/styles/index.css
+++ b/styles/index.css
@@ -25,6 +25,24 @@ body {
 	background-color: #0c2020;
 	padding: 1rem;
 	color: white;
+	position: relative;
+}
+
+.logo-container {
+	position: relative;
+	width: 10rem;
+	height: 5rem;
+}
+.logo-container a {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: absolute;
+}
+
+.logo-container img {
+	width: 100%;
+	position: absolute;
 }
 
 .nav-link-container {
@@ -64,6 +82,15 @@ body {
 	justify-content: center;
 	text-align: center;
 	font-family: 'Poppins';
+	position: relative;
+}
+
+.hero-container video {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: -1;
 }
 
 .hero-countdown-container {
@@ -96,6 +123,7 @@ body {
 
 main {
 	padding: 6rem;
+	background-color: black;
 }
 
 main h1 {
