--- a/styles/index.css
+++ b/styles/index.css
@@ -76,13 +76,14 @@ body {
 
 .hero-container {
 	width: 100%;
-	height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	text-align: center;
 	font-family: 'Poppins';
 	position: relative;
+	padding: 1rem 0 3rem 0;
+	color: white;
 }
 
 .hero-container video {
@@ -93,19 +94,41 @@ body {
 	z-index: -1;
 }
 
+.hero-container video::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.5;
+}
+
 .hero-countdown-container {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
+.hero-main-div img:nth-of-type(1) {
+	width: 20rem;
+	margin-bottom: 1rem;
+}
+
+.hero-main-div img {
+	width: 30rem;
+}
+
 .hero-main-div h3 {
-	font-size: 2rem;
-	font-weight: 500;
+	font-size: 1.5rem;
+	font-weight: 400;
 }
 
 .hero-main-div h1 {
 	font-size: 3rem;
+	text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.7),
+		-2px -2px 5px rgba(255, 255, 255, 0.7);
 }
 
 .each-hc-container {
@@ -143,4 +166,22 @@ main p {
 	font-weight: 400;
 	font-size: 1.1rem;
 	line-height: 1.7rem;
+}
+
+footer {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 2rem;
+}
+
+.socials img {
+	width: 100%;
+}
+
+.socials a {
+	width: 3rem;
+	height: 3rem;
 }
