--- a/views/non-technical-events.html
+++ b/views/non-technical-events.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/styles/non-technical-events.css">
     <link rel="stylesheet" href="../public/styles/nav.css">
-    <title>Technical Events</title>
+    <title>Non-Technical Events</title>
 </head>
 
 <body>
