--- a/views/workshop.html
+++ b/views/workshop.html
@@ -1,102 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../public/styles/workshop.css" />
+		<link rel="stylesheet" href="../public/styles/nav.css" />
+		<title>Workshops</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/styles/workshop.css">
-    <link rel="stylesheet" href="../public/styles/nav.css">
-    <title>Workshops</title>
-</head>
+	<body>
+		<!-- Navbar -->
 
-<body>
-    <!-- Navbar -->
+		<nav class="nav-container">
+			<div class="logo-container">
+				<a href="../index.html"
+					><img src="../public/assets/Logo.png" alt=""
+				/></a>
+			</div>
+			<ul class="nav-link-container">
+				<li class="nav-link" class="nav-link">
+					<a href="/registration" class="nav-link-a">Registration</a>
+				</li>
+				<li class="nav-link">
+					<a href="./technical-events.html" class="nav-link-a"
+						>Technical Events</a
+					>
+				</li>
+				<li class="nav-link">
+					<a href="./non-technical-events.html" class="nav-link-a"
+						>Non-Technical Events</a
+					>
+				</li>
+				<li class="nav-link">
+					<a href="./workshop.html" class="nav-link-a">Workshops</a>
+				</li>
+				<li class="nav-link">
+					<a href="/contact-us" class="nav-link-a">Contact Us</a>
+				</li>
+			</ul>
+		</nav>
 
-    <nav class="nav-container">
-        <div class="logo-container">
-            <a href="../index.html"><img src="../public/assets/Logo.png" alt="" /></a>
-        </div>
-        <ul class="nav-link-container">
-            <li class="nav-link" class="nav-link">
-                <a href="/registration" class="nav-link-a">Registration</a>
-            </li>
-            <li class="nav-link">
-                <a href="./technical-events.html" class="nav-link-a">Technical Events</a>
-            </li>
-            <li class="nav-link">
-                <a href="./non-technical-events.html" class="nav-link-a">Non-Technical Events</a>
-            </li>
-            <li class="nav-link">
-                <a href="./workshop.html" class="nav-link-a">Workshops</a>
-            </li>
-            <li class="nav-link">
-                <a href="/contact-us" class="nav-link-a">Contact Us</a>
-            </li>
-        </ul>
-    </nav>
+		<section class="section-container">
+			<video autoplay loop>
+				<source src="../public/assets/hero.mp4" type="video/mp4" />
+			</video>
+			<h1 class="headingTag">WORKSHOPS</h1>
+			<div class="card-main-div">
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>3D PRINTING</h1>
+					</span>
+					<div class="card">
+						<p>
+							This workshop offers a holistic learning on the functions and the
+							working of a 3D printer
+						</p>
+						<button class="button button1">Know More</button>
+					</div>
+				</div>
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>VEHICLE BUILDING</h1>
+					</span>
+					<div class="card">
+						<p>
+							This workshop offers a session on the various areas of vehicle
+							building
+						</p>
+						<button class="button button2">Know More</button>
+					</div>
+				</div>
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>ROBOTICS</h1>
+					</span>
+					<div class="card">
+						<p>
+							This workshop concentrates on the basics of robotics and all the
+							technologies related to it
+						</p>
+						<button class="button button3">Know More</button>
+					</div>
+				</div>
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>CNC</h1>
+					</span>
+					<div class="card">
+						<p>
+							This workshop is aimed to give an experience on working with the
+							CNC machine
+						</p>
+						<button class="button button4">Know More</button>
+					</div>
+				</div>
+			</div>
+			<div class="pop-up-div">
+				<div class="pop-up-container"></div>
+			</div>
+		</section>
 
-    <section class="section-container">
-        <video autoplay loop>
-            <source src="../public/assets/hero.mp4" type="video/mp4" />
-        </video>
-        <h1 class="headingTag">WORKSHOPS</h1>
-        <div class="card-main-div">
-            <div class="card-div">
-                <span class="animation-card">
-                    <h1>TECHQUIZ</h1>
-                </span>
-                <div class="card">
-                    <p>Sharpen your minds and test your knowledge on the latest technologies available</p>
-                    <button class="button button1">Know More</button>
-                </div>
-            </div>
-            <div class="card-div">
-                <span class="animation-card">
-                    <h1>PAPER PRESENTATION</h1>
-                </span>
-                <div class="card">
-                    <p>Advancements in science have been a stepping stone in technology. Present your research and be a
-                        part of the world of tomorrow</p>
-                    <button class="button button2">Know More</button>
-                </div>
-            </div>
-            <div class="card-div">
-                <span class="animation-card">
-                    <h1>CAE ANALYSIS</h1>
-                </span>
-                <div class="card">
-                    <p>Design, create and analyze your creation</p>
-                    <button class="button button3">Know More</button>
-                </div>
-            </div>
-            <div class="card-div">
-                <span class="animation-card">
-                    <h1>CAD MODELLING</h1>
-                </span>
-                <div class="card">
-                    <p>Express your creativity through your designs of various parts</p>
-                    <button class="button button4">Know More</button>
-                </div>
-            </div>
-            <div class="card-div">
-                <span class="animation-card">
-                    <h1>DIAGRAMATICAL REASONING</h1>
-                </span>
-                <div class="card">
-                    <p>Express your creativity through your designs of various parts</p>
-                    <button class="button button5">Know More</button>
-                </div>
-            </div>
-        </div>
-        <div class="pop-up-div">
-            <div class="pop-up-container"></div>
-        </div>
-    </section>
-
-
-
-    <script src="../public/js/workshop.js"></script>
-</body>
-
+		<script src="../public/js/workshop.js"></script>
+	</body>
 </html>
