--- a/views/technical-events.html
+++ b/views/technical-events.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/styles/technical-events.css">
+    <link rel="stylesheet" href="../public/styles/footer.css">
     <link rel="stylesheet" href="../public/styles/nav.css">
     <title>Technical Events</title>
 </head>
@@ -21,6 +22,9 @@
             <li class="nav-link" class="nav-link">
                 <a href="/registration" class="nav-link-a">Registration</a>
             </li>
+            <li class="nav-link">
+				<a href="./about.html" class="nav-link-a">About</a>
+			</li>
             <li class="nav-link">
                 <a href="./technical-events.html" class="nav-link-a">Technical Events</a>
             </li>
@@ -93,6 +97,23 @@
             <div class="pop-up-container"></div>
         </div>
     </section>
+
+    <footer>
+		<div class="footer-div">
+			<div class="socials">
+				<a target="_blank" href="https://www.instagram.com/mechgust_cit/">
+					<img src="https://img.icons8.com/fluency-systems-regular/48/000000/instagram-new--v1.png" />
+				</a>
+				<a target="_blank" href="https://www.instagram.com/mechgust_cit/"><img
+						src="https://img.icons8.com/ios/50/000000/youtube-play--v1.png" />
+				</a>
+				<a target="_blank" href="https://www.facebook.com/mechgust/">
+					<img src="https://img.icons8.com/fluency-systems-regular/48/000000/facebook.png" />
+				</a>
+			</div>
+			<p>© 2022 Mechgust - ALL RIGHTS RESERVED</p>
+		</div>
+	</footer>
 
 
 
