--- a/public/styles/non-technical-events.css
+++ b/public/styles/non-technical-events.css
@@ -23,11 +23,13 @@ body {
 }
 
 .section-container video {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	top: 0;
+	left: 0;
+	z-index: -1;
 }
 
 .headingTag {
