--- a/public/styles/workshop.css
+++ b/public/styles/workshop.css
@@ -1,196 +1,198 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    color: var(--font-color);
-    font-family: "Poppins";
+	color: var(--font-color);
+	font-family: 'Poppins';
 }
 
 .section-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-family: "Poppins";
-    position: relative;
-    padding: 1rem 0 3rem 0;
-    color: white;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	font-family: 'Poppins';
+	position: relative;
+	padding: 1rem 0 3rem 0;
+	color: white;
 }
 
 .section-container video {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	top: 0;
+	left: 0;
+	z-index: -1;
 }
 
 .headingTag {
-    font-size: 3rem;
-    font-weight: bold;
-    color: white;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    margin-bottom: 1rem;
-    text-shadow: 0 0 0.5rem var(--font-color);
+	font-size: 3rem;
+	font-weight: bold;
+	color: white;
+	text-transform: uppercase;
+	letter-spacing: 0.1rem;
+	margin-bottom: 1rem;
+	text-shadow: 0 0 0.5rem var(--font-color);
 }
 
 .card-main-div {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
 .card-div {
-    position: relative;
-    width: 18rem;
-    height: 18rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgb(62, 16, 228);
-    padding: 1%;
-    margin: 5%;
-    border-radius: 10px;
-    overflow: hidden;
+	position: relative;
+	width: 18rem;
+	height: 18rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: rgb(62, 16, 228);
+	padding: 1%;
+	margin: 5%;
+	border-radius: 10px;
+	overflow: hidden;
 }
 
 .animation-card {
-    width: 100%;
-    height: 90%;
-    z-index: 10;
-    position: absolute;
-    background: rgb(4, 183, 207);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    border-radius: 10px;
-    transition: all 0.5s ease-in-out;
+	width: 100%;
+	height: 90%;
+	z-index: 10;
+	position: absolute;
+	background: rgb(4, 183, 207);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	border-radius: 10px;
+	transition: all 0.5s ease-in-out;
 }
 
 .card-div:hover .animation-card {
-    top: -100%;
+	top: -100%;
 }
 
 .card {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 .button {
-    width: 140px;
-    height: 45px;
-    margin: 5%;
-    font-family: "Roboto", sans-serif;
-    font-size: 11px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
+	width: 140px;
+	height: 45px;
+	margin: 5%;
+	font-family: 'Roboto', sans-serif;
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: 2.5px;
+	font-weight: 500;
+	color: #000;
+	background-color: #fff;
+	border: none;
+	border-radius: 45px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
 }
 
 .button:hover {
-    background-color: rgb(4, 183, 207);
-    box-shadow: 0px 15px 20px rgba(4, 183, 207, 0.733);
-    color: #fff;
-    transform: translateY(-7px);
+	background-color: rgb(4, 183, 207);
+	box-shadow: 0px 15px 20px rgba(4, 183, 207, 0.733);
+	color: #fff;
+	transform: translateY(-7px);
 }
 
 /* pop-up */
 
 .pop-up-div {
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    display: none;
-    justify-content: center;
-    overflow: scroll;
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	display: none;
+	justify-content: center;
+	overflow: scroll;
 }
 
 .pop-up-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease-in-out;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+	z-index: 10;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: all 0.5s ease-in-out;
 }
 
 .pop-up-card {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-x: scroll;
-    justify-content: start;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	overflow-x: scroll;
+	justify-content: start;
 }
 
 .pop-up-card::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
+	width: 0px;
+	background: transparent;
 }
 
 .pop-up-text {
-    position: relative;
-    font-family: "Poppins";
-    color: white;
-    margin: 2rem 0;
-    text-align: left;
+	position: relative;
+	font-family: 'Poppins';
+	color: white;
+	margin: 2rem 0;
+	text-align: left;
 }
 
 .heading-pop-up {
-    font-family: "Poppins";
-    font-size: 2rem;
-    color: rgba(4, 183, 207, 0.733);
-    margin: 2rem 0;
-    text-align: center;
+	font-family: 'Poppins';
+	font-size: 2rem;
+	color: rgba(4, 183, 207, 0.733);
+	margin: 2rem 0;
+	text-align: center;
 }
 
 .pop-up-close {
-    position: absolute;
-    right: 5%;
-    top: 5%;
-    cursor: pointer;
-    background: #fff;
-    color: #000;
-    font-size: 30px;
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
+	position: absolute;
+	right: 5%;
+	top: 5%;
+	cursor: pointer;
+	background: #fff;
+	color: #000;
+	font-size: 30px;
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 1000;
 }
 
 /* home */
