--- a/views/non-technical-events.html
+++ b/views/non-technical-events.html
@@ -1,125 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../public/styles/non-technical-events.css" />
+		<link rel="stylesheet" href="../public/styles/footer.css" />
+		<link rel="stylesheet" href="../public/styles/nav.css" />
+		<title>Non-Technical Events</title>
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="../public/styles/non-technical-events.css" />
-	<link rel="stylesheet" href="../public/styles/footer.css" />
-	<link rel="stylesheet" href="../public/styles/nav.css" />
-	<title>Non-Technical Events</title>
-</head>
+	<body>
+		<!-- Navbar -->
+		<nav class="nav-container">
+			<div class="logo-container">
+				<a href="./index.html"><img src="./public/assets/Logo.png" alt="" /></a>
+			</div>
+			<ul class="nav-link-container">
+				<li class="nav-link" class="nav-link">
+					<a href="/registration" class="nav-link-a">Registration</a>
+				</li>
+				<li class="nav-link">
+					<a href="./views/about.html" class="nav-link-a">About</a>
+				</li>
+				<li class="nav-link">
+					<a href="./views/technical-events.html" class="nav-link-a"
+						>Technical Events</a
+					>
+				</li>
+				<li class="nav-link">
+					<a href="./views/non-technical-events.html" class="nav-link-a"
+						>Non-Technical Events</a
+					>
+				</li>
+				<li class="nav-link">
+					<a href="./views/workshop.html" class="nav-link-a">Workshops</a>
+				</li>
+				<li class="nav-link">
+					<a href="/contact-us" class="nav-link-a">Contact Us</a>
+				</li>
+			</ul>
+			<div class="nav-toggler">
+				<span></span>
+			</div>
+		</nav>
 
-<body>
-	<!-- Navbar -->
-
-	<nav class="nav-container">
-		<div class="logo-container">
-			<a href="../index.html"><img src="../public/assets/Logo.png" alt="" /></a>
-		</div>
-		<ul class="nav-link-container">
-			<li class="nav-link" class="nav-link">
-				<a href="/registration" class="nav-link-a">Registration</a>
-			</li>
-			<li class="nav-link">
-				<a href="./about.html" class="nav-link-a">About</a>
-			</li>
-			<li class="nav-link">
-				<a href="./technical-events.html" class="nav-link-a">Technical Events</a>
-			</li>
-			<li class="nav-link">
-				<a href="./non-technical-events.html" class="nav-link-a">Non-Technical Events</a>
-			</li>
-			<li class="nav-link">
-				<a href="./workshop.html" class="nav-link-a">Workshops</a>
-			</li>
-			<li class="nav-link">
-				<a href="/contact-us" class="nav-link-a">Contact Us</a>
-			</li>
-			
-		</ul>
-	</nav>
-
-	<section class="section-container">
-		<video autoplay loop>
-			<source src="../public/assets/hero.mp4" type="video/mp4" />
-		</video>
-		<h1 class="headingTag">NON - TECHNICAL EVENTS</h1>
-		<div class="card-main-div">
-			<div class="card-div">
-				<span class="animation-card">
-					<h1>CONNEXION</h1>
-				</span>
-				<div class="card">
-					<p>Correct the dots on famous pop culture riddles given</p>
-					<button class="button button1">Know More</button>
+		<section class="section-container">
+			<video autoplay loop>
+				<source src="../public/assets/hero.mp4" type="video/mp4" />
+			</video>
+			<h1 class="headingTag">NON - TECHNICAL EVENTS</h1>
+			<div class="card-main-div">
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>CONNEXION</h1>
+					</span>
+					<div class="card">
+						<p>Correct the dots on famous pop culture riddles given</p>
+						<button class="button button1">Know More</button>
+					</div>
+				</div>
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>PICTURESQUE</h1>
+					</span>
+					<div class="card">
+						<p>
+							Life through the lens is a sight to behold. So show others what
+							life through your eyes is
+						</p>
+						<button class="button button2">Know More</button>
+					</div>
+				</div>
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>SURPRISE EVENT</h1>
+					</span>
+					<div class="card">
+						<p>Ssssshhh….. It’s a Surprise</p>
+						<button class="button button3">Know More</button>
+					</div>
+				</div>
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>MEME CREATION</h1>
+					</span>
+					<div class="card">
+						<p>Express your creativity through your designs of various parts</p>
+						<button class="button button4">Know More</button>
+					</div>
+				</div>
+				<div class="card-div">
+					<span class="animation-card">
+						<h1>SINGING</h1>
+					</span>
+					<div class="card">
+						<p>
+							Slow and steady wins the race. Fast and Hasty goes into the waste
+						</p>
+						<button class="button button5">Know More</button>
+					</div>
 				</div>
 			</div>
-			<div class="card-div">
-				<span class="animation-card">
-					<h1>PICTURESQUE</h1>
-				</span>
-				<div class="card">
-					<p>
-						Life through the lens is a sight to behold. So show others what
-						life through your eyes is
-					</p>
-					<button class="button button2">Know More</button>
+			<div class="pop-up-div">
+				<div class="pop-up-container"></div>
+			</div>
+		</section>
+		<footer>
+			<div class="footer-div">
+				<div class="socials">
+					<a target="_blank" href="https://www.instagram.com/mechgust_cit/">
+						<img
+							src="https://img.icons8.com/fluency-systems-regular/48/000000/instagram-new--v1.png"
+						/>
+					</a>
+					<a target="_blank" href="https://www.instagram.com/mechgust_cit/"
+						><img
+							src="https://img.icons8.com/ios/50/000000/youtube-play--v1.png"
+						/>
+					</a>
+					<a target="_blank" href="https://www.facebook.com/mechgust/">
+						<img
+							src="https://img.icons8.com/fluency-systems-regular/48/000000/facebook.png"
+						/>
+					</a>
 				</div>
+				<p>© 2022 Mechgust - ALL RIGHTS RESERVED</p>
 			</div>
-			<div class="card-div">
-				<span class="animation-card">
-					<h1>SURPRISE EVENT</h1>
-				</span>
-				<div class="card">
-					<p>Ssssshhh….. It’s a Surprise</p>
-					<button class="button button3">Know More</button>
-				</div>
-			</div>
-			<div class="card-div">
-				<span class="animation-card">
-					<h1>MEME CREATION</h1>
-				</span>
-				<div class="card">
-					<p>Express your creativity through your designs of various parts</p>
-					<button class="button button4">Know More</button>
-				</div>
-			</div>
-			<div class="card-div">
-				<span class="animation-card">
-					<h1>SINGING</h1>
-				</span>
-				<div class="card">
-					<p>
-						Slow and steady wins the race. Fast and Hasty goes into the waste
-					</p>
-					<button class="button button5">Know More</button>
-				</div>
-			</div>
-		</div>
-		<div class="pop-up-div">
-			<div class="pop-up-container"></div>
-		</div>
-	</section>
-	<footer>
-		<div class="footer-div">
-			<div class="socials">
-				<a target="_blank" href="https://www.instagram.com/mechgust_cit/">
-					<img src="https://img.icons8.com/fluency-systems-regular/48/000000/instagram-new--v1.png" />
-				</a>
-				<a target="_blank" href="https://www.instagram.com/mechgust_cit/"><img
-						src="https://img.icons8.com/ios/50/000000/youtube-play--v1.png" />
-				</a>
-				<a target="_blank" href="https://www.facebook.com/mechgust/">
-					<img src="https://img.icons8.com/fluency-systems-regular/48/000000/facebook.png" />
-				</a>
-			</div>
-			<p>© 2022 Mechgust - ALL RIGHTS RESERVED</p>
-		</div>
-	</footer>
+		</footer>
 
-	<script src="../public/js/non-technical-events.js"></script>
-</body>
+		<script src="../public/js/non-technical-events.js"></script>
+		<script src="./public/js/nav.js"></script>
 
+	</body>
 </html>
