--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -37,3 +37,9 @@
     width: 1.5rem;
     height: 1.5rem;
 }
+
+@media (max-width: 768px) {
+    .footer-div p {
+        text-align: center;
+    }
+}
