--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,162 +1,167 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-	--font-color: #cfe3d1;
+    --font-color: #cfe3d1;
 }
 
 /* Navbar */
 body.no-scroll {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .nav-container {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: #0c2020;
-	padding: 1rem;
-	color: white;
-	position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #0c2020;
+    padding: 1rem;
+    color: white;
+    position: relative;
+    z-index: 5000;
 }
 
 .logo-container {
-	position: relative;
-	width: 10rem;
-	height: 5rem;
+    position: relative;
+    width: 10rem;
+    height: 5rem;
 }
 .logo-container a {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
 }
 
 .logo-container img {
-	width: 100%;
-	position: absolute;
+    width: 100%;
+    position: absolute;
 }
 
 .nav-link-container {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	height: fit-content;
-	transition: all 0.3s ease-in-out;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: fit-content;
+    transition: all 0.3s ease-in-out;
 }
 
 .nav-link-container {
-	list-style-type: none;
+    list-style-type: none;
 }
 
 .nav-link {
-	margin: 0 1rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background: #0c2020;
-	box-shadow: -10px -10px 20px #133333, 10px 10px 20px #050d0d;
-	border-radius: 10px;
+    margin: 0 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #0c2020;
+    box-shadow: -10px -10px 20px #133333, 10px 10px 20px #050d0d;
+    border-radius: 10px;
+    color: white;
 }
 
 .nav-link-a {
-	text-decoration: none;
-	color: inherit;
-	padding: 1rem;
+    text-decoration: none;
+    color: inherit;
+    padding: 1rem;
 }
 
 .nav-toggler {
-	display: none;
+    display: none;
 }
 
 @media (max-width: 1200px) {
-	.nav-link {
-		margin: 0 0.5rem;
-	}
+    .nav-link {
+        margin: 0 0.5rem;
+    }
 
-	.nav-link-a {
-		padding: 0.8rem;
-	}
+    .nav-link-a {
+        padding: 0.8rem;
+    }
 }
 
 @media (max-width: 900px) {
-	.nav-container.open .logo-container {
-		position: absolute;
-		width: 10rem;
-		height: 5rem;
-		z-index: 2;
-		top: 0;
-	}
+    .nav-container.open .logo-container {
+        position: absolute;
+        width: 10rem;
+        height: 5rem;
+        z-index: 2;
+        top: 0;
+    }
+    .logo-container a {
+        right: 25px;
+    }
 
-	.nav-link-container {
-		width: 100%;
-		height: 100vh;
-		position: absolute;
-		top: 0;
-		left: 0;
-		transform: translateY(-100%);
-		background: #0c2020;
-		flex-direction: column;
-		z-index: 1;
-		justify-content: center;
-	}
+    .nav-link-container {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translateY(-100%);
+        background: #0c2020;
+        flex-direction: column;
+        z-index: 1;
+        justify-content: center;
+    }
 
-	.nav-container.open .nav-link-container {
-		transform: translateY(0);
-	}
+    .nav-container.open .nav-link-container {
+        transform: translateY(0);
+    }
 
-	.nav-link {
-		width: 15rem;
-		margin: 1.5rem 0.5rem;
-	}
+    .nav-link {
+        width: 15rem;
+        margin: 0.7rem;
+    }
 
-	.nav-link-a {
-		padding: 1rem;
-	}
+    .nav-link-a {
+        padding: 1rem;
+    }
 
-	.nav-toggler {
-		display: block;
-		width: 3rem;
-		height: 3rem;
-		position: absolute;
-		right: 0;
-		top: 0;
-		transform: translate(-50%, 50%);
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		z-index: 5;
-	}
+    .nav-toggler {
+        display: block;
+        width: 3rem;
+        height: 3rem;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        transform: translate(-50%, 50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 5;
+    }
 
-	.nav-toggler span {
-		width: 100%;
-		height: 0.4rem;
-		background: white;
-		position: relative;
-		border-radius: 10px;
-	}
+    .nav-toggler span {
+        width: 100%;
+        height: 0.4rem;
+        background: white;
+        position: relative;
+        border-radius: 10px;
+    }
 
-	.nav-toggler span::after {
-		content: '';
-		width: 100%;
-		height: 100%;
-		border-radius: 10px;
-		background: white;
-		position: absolute;
-		top: 0;
-		left: 0;
-		transform: translateY(-160%);
-	}
+    .nav-toggler span::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        background: white;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translateY(-160%);
+    }
 
-	.nav-toggler span::before {
-		content: '';
-		width: 100%;
-		border-radius: 10px;
-		height: 100%;
-		background: white;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		transform: translateY(160%);
-	}
+    .nav-toggler span::before {
+        content: "";
+        width: 100%;
+        border-radius: 10px;
+        height: 100%;
+        background: white;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        transform: translateY(160%);
+    }
 }
