--- a/views/workshop.html
+++ b/views/workshop.html
@@ -12,27 +12,27 @@
 	<body>
 		<nav class="nav-container">
 			<div class="logo-container">
-				<a href="./index.html"><img src="./public/assets/Logo.png" alt="" /></a>
+				<a href="../index.html"><img src="../public/assets/Logo.png" alt="" /></a>
 			</div>
 			<ul class="nav-link-container">
 				<li class="nav-link" class="nav-link">
 					<a href="/registration" class="nav-link-a">Registration</a>
 				</li>
 				<li class="nav-link">
-					<a href="./views/about.html" class="nav-link-a">About</a>
+					<a href="./about.html" class="nav-link-a">About</a>
 				</li>
 				<li class="nav-link">
-					<a href="./views/technical-events.html" class="nav-link-a"
+					<a href="./technical-events.html" class="nav-link-a"
 						>Technical Events</a
 					>
 				</li>
 				<li class="nav-link">
-					<a href="./views/non-technical-events.html" class="nav-link-a"
+					<a href="./non-technical-events.html" class="nav-link-a"
 						>Non-Technical Events</a
 					>
 				</li>
 				<li class="nav-link">
-					<a href="./views/workshop.html" class="nav-link-a">Workshops</a>
+					<a href="./workshop.html" class="nav-link-a">Workshops</a>
 				</li>
 				<li class="nav-link">
 					<a href="/contact-us" class="nav-link-a">Contact Us</a>
@@ -121,6 +121,6 @@
 		</footer>
 
 		<script src="../public/js/workshop.js"></script>
-		<script src="./public/js/nav.js"></script>
+		<script src="../public/js/nav.js"></script>
 	</body>
 </html>
