--- a/views/about.html
+++ b/views/about.html
@@ -35,7 +35,7 @@
 				<a href="./workshop.html" class="nav-link-a">Workshops</a>
 			</li>
 			<li class="nav-link">
-				<a href="/contact-us" class="nav-link-a">Contact Us</a>
+				<a href="./contact.html" class="nav-link-a">Contact Us</a>
 			</li>
 		</ul>
 		<div class="nav-toggler">
